--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,7 +26,7 @@
         id="popup-div"
         class="fixed top-0 left-0 w-full h-screen flex items-center justify-center"
       >
-        <form action="/upload-file" method="post" enctype="multipart/form-data">
+        <form action="/upload" method="post" enctype="multipart/form-data">
           <div class="flex items-center justify-center w-96">
             <label
               for="dropzone-file"
